:bug: Use content-visibility for tabs (#680)

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -70,6 +70,18 @@
   }
 }
 
+@layer utilities {
+  .content-visibility-auto {
+    content-visibility: auto;
+  }
+  .content-visibility-hidden {
+    content-visibility: hidden;
+  }
+  .content-visibility-visible {
+    content-visibility: visible;
+  }
+}
+
 @supports not (overflow-wrap: anywhere) {
   .break-anywhere {
     word-break: break-word;
